--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": ">=2.0.x-dev",
+    "yiisoft/yii2": ">=2.0.6",
     "bower-asset/social-likes": "^3.0@dev"
   },
   "autoload": {
